examples/103-breast-cancer-classifier-eks-example-with-ui/enclaveClientFE/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ui
  labels:
    app: client-ui
  namespace: fl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: client-ui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: eks.amazonaws.com/nodegroup
                    operator: In
                    values:
                      - EnclavesNodeGroup
      serviceAccountName: fl-ksa
      containers:
        - image: xxxx.dkr.ecr.us-east-1.amazonaws.com/breast-cancer-classifier-client-frontend:latest
          # command: ["sleep", "36000"] # for testing only
          imagePullPolicy: Always
          name: client-ui
          ports:
            - containerPort: 3000
              protocol: TCP
