examples/103-breast-cancer-classifier-eks-example-with-ui/enclaveClientFE/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-ui-svc
  namespace: fl
spec:
  selector:
    app: client-ui
  ports:
    - name: client-ui
      # protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
